@@ -1,0 +1,41 @@
+#Handlers we plan to use
+handlers=java.util.logging.FileHandler,java.util.logging.ConsoleHandler
+
+#Global logger - By default only log warnings
+.level=WARNING
+
+#Jakarta Data TCK logger - By default log everything for ee.jakarta.tck.data
+ee.jakarta.tck.data.level=ALL
+
+# Arquillian and JNoSQL - By default log everything, might reduce after development is complete.
+org.jbossl=ALL
+org.eclipse.jnosql=all
+
+#Formatting for the simple formatter
+java.util.logging.SimpleFormatter.class.log=true
+java.util.logging.SimpleFormatter.class.full=false
+java.util.logging.SimpleFormatter.class.length=10
+
+java.util.logging.SimpleFormatter.level.log=true
+
+java.util.logging.SimpleFormatter.method.log=true
+java.util.logging.SimpleFormatter.method.length=30
+
+java.util.logging.SimpleFormatter.thread.log=true
+java.util.logging.SimpleFormatter.thread.length=3
+
+java.util.logging.SimpleFormatter.time.log=true
+java.util.logging.SimpleFormatter.time.format=[MM/dd/yyyy HH:mm:ss:SSS z]
+
+java.util.logging.SimpleFormatter.format=[%1$tF %1$tT] %4$.1s %3$s %5$s %n
+
+# Log warnings to console
+java.util.logging.ConsoleHandler.formatter=java.util.logging.SimpleFormatter
+java.util.logging.ConsoleHandler.level=WARNING
+
+# Log everything else to file
+java.util.logging.FileHandler.pattern=target/DataTCK%g%u.log
+java.util.logging.FileHandler.limit = 500000
+java.util.logging.FileHandler.count = 5
+java.util.logging.FileHandler.formatter=java.util.logging.SimpleFormatter
+java.util.logging.FileHandler.level=CONFIG
